<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblNombres" />

    <EditText
        android:id="@+id/txtNombres"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblAppaterno" />

    <EditText
        android:id="@+id/txtAppaterno"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblApmaterno" />

    <EditText
        android:id="@+id/txtApmaterno"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" >

        <Button
            android:id="@+id/btnAnterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAnterior" />

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSiguiente" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEliminar" />
    </LinearLayout>

</LinearLayout>